themes/signum/assets/styles/_charts.scss
.card.chart-card {
	text-align: left;

	@include media-breakpoint-down(md) {
		box-shadow: none;
	}

	+ .chart-card {
		margin-top: 2rem;
	}

	.card-body {
		@include media-breakpoint-down(md) {
			padding-left : 0;
			padding-right: 0;
		}
	}

	h3 {
		font-family  : $headings-font-family;
		font-weight  : $headings-font-weight;
		font-size    : 1.5rem;
		margin-bottom: 1.875rem;
	}

	.chart-height-wrapper {
		height: 280px;
	}

	.chart-legend {
		@extend .list-inline;
		margin-top   : 1.5rem;
		margin-bottom: 0;
		text-align   : left;

		li {
			@extend .list-inline-item;
			font-weight : bold;
			color       : $gray-900;
			font-size   : 0.9375rem;
			margin-right: 1.5rem !important;

			span {
				width        : 1.25rem;
				height       : 1.25rem;
				border-radius: 100%;
				display      : inline-block;
				margin-right : 0.25rem;
				position     : relative;
				top          : 4px;

				&.bg-green {
					background-color: $sea;
				}

				&.bg-pink {
					background-color: $pink;
				}

				&.bg-cyan {
					background-color: $cyan;
				}
			}
		}

		&.vertical {
			li {
				display      : block;
				margin-bottom: 0.5rem;
				font-weight  : normal;
			}
		}
	}

	.chart-collapse-filters {
		display    : flex;
		align-items: center;

		@include media-breakpoint-down(md) {
			align-items: flex-end;
		}

		@include media-breakpoint-down(sm) {
			display: none;
		}

		.filter-wrapper {
			flex          : 0 0 18%;
			font-size     : 0.75rem;
			text-transform: uppercase;
			letter-spacing: 1px;
			font-weight   : bold;
			padding       : 0 1.25rem 1.25rem;
			position      : relative;
			color         : inherit;
			white-space   : nowrap;

			@include media-breakpoint-down(md) {
				flex   : 0 0 20%;
				padding: 0 0.25rem 1.25rem;
			}

			@include media-breakpoint-down(sm) {
				font-size: 0.5625rem;
				display  : inline-block;
				width    : 15%;
			}

			a {
				// Temporary, since these can't be sorted right now
				pointer-events: none;

				&:hover {
					text-decoration: none;
					color          : $primary;
					cursor         : default;
				}
			}

			span {
				color: inherit;
			}

			i {
				font-size  : 0.625rem;
				margin-left: 0.25rem;

				&.sorting-icon {
					display: none;
				}

				&.arrow-flip {
					transform: rotate(180deg);
				}
			}

			&.active {
				color: $primary;

				i {
					&.sorting-icon {
						display: inline-block;

						@include media-breakpoint-down(md) {
							display: none;
						}
					}
				}
			}

			&:last-child {
				flex: 0 0 28%;

				@include media-breakpoint-down(md) {
					flex: 0 0 20%;
				}
			}
		}
	}

	.chart-card-overlay-close,
	.chart-card-overlay-open {
		position  : absolute;
		top       : 1rem;
		right     : 1rem;
		opacity   : 0.5;
		transition: $transition-base;
		cursor    : pointer;

		&:active,
		&:hover {
			opacity: 1;
			color  : $primary;
			cursor : default;
		}
	}

	.chart-card-overlay-open {
		font-size: 0.875rem;
		color    : $gray-900;
		display  : block;
	}

	.chart-card-overlay-close {
		i {
			font-size: 1.5rem;
		}
	}

	.chart-card-overlay {
		background-color: $night;
		color           : $white;
		border-radius   : 0.125rem;
		padding         : 2.5rem;
		position        : absolute;
		top             : 8rem;
		left            : 3rem;
		right           : 3rem;
		box-shadow      : $box-shadow;
		z-index         : 2;

		@include media-breakpoint-down(sm) {
			left : -0.25rem;
			right: -0.25rem;
		}

		h2 {
			color        : $gold;
			margin-bottom: 1.5rem;
		}

		p {
			margin-bottom: 1.5rem;
		}

		.btn {
			i {
				font-size  : 0.75rem;
				margin-left: 0.25rem;
			}
		}
	}

	.chart-collapse {
		&:focus {
			outline   : none;
			box-shadow: none;
		}

		.chart-collapse-header {
			width           : 100%;
			padding         : 0;
			background-color: $white;
			border          : 1px solid $gray-100;
			border-bottom   : none;

			&:focus {
				outline   : none;
				box-shadow: none;
			}

			.chart-collapse-details {
				width      : 100%;
				display    : flex;
				align-items: center;

				> div {
					flex      : 0 0 18%;
					padding   : 0.5rem 1.25rem;
					text-align: left;
					color     : $gray-700;

					@include media-breakpoint-down(md) {
						flex   : 0 0 20%;
						padding: 0.5rem 0.25rem;
					}

					@include media-breakpoint-down(sm) {
						font-size: 0.75rem;
					}

					&.chart-collapse-rank {
						font-family: $font-family-serif;
						font-size  : 3rem;
						color      : $gray-900;

						@include media-breakpoint-down(sm) {
							font-size   : 1.5rem;
							padding-left: 0.5rem;
						}
					}
				}
			}

			.progress {
				border-radius   : 0;
				height          : 0.5rem;
				box-shadow      : none;
				background-color: $gray-100;
			}

			.chart-collapse-arrow {
				flex         : 0 0 10% !important;
				text-align   : right !important;
				padding-right: 2rem;
				position     : relative;

				@include media-breakpoint-down(md) {
					padding: 0;
					flex   : 0;
				}

				i {
					display   : inline-block;
					color     : $gray-700;
					transition: $transition-base;
					font-size : 1.5rem;

					@include media-breakpoint-down(md) {
						position : absolute;
						right    : 0.5rem;
						top      : 0;
						transform: translateY(-50%);
					}
				}
			}

			&.collapsed {
				.chart-collapse-arrow {
					i {
						transform: rotate(180deg);
						color    : $gray-200;
					}
				}
			}
		}

		.chart-collapse-content {
			border-top: none;
			padding   : 1.25rem;
		}

	}

	/* Special controls for Quote Fuse Liquidity donut chart */
	&.quote-fuse-chart {
		.threshold-radios {
			@include media-breakpoint-down(md) {
				display       : flex;
				padding-bottom: 1.5rem;
				flex-wrap     : wrap;
			}

			.custom-control {
				margin-bottom: 0.5rem;

				@include media-breakpoint-down(md) {
					margin-bottom: 0;
					margin-right : 0.5rem;
				}
			}
		}
	}
}

p + .chart-card {
	margin-top: 2.5rem;
}

