Fix LL chart collapse icon overflow on mobile

--- a/themes/signum/assets/styles/_charts.scss
+++ b/themes/signum/assets/styles/_charts.scss
@@ -233,6 +233,7 @@
 			background-color: $white;
 			border          : 1px solid $gray-100;
 			border-bottom   : none;
+			position        : relative;
 
 			&:focus {
 				outline   : none;
@@ -251,7 +252,7 @@
 					color     : $gray-700;
 
 					@include media-breakpoint-down(md) {
-						flex   : 0 0 20%;
+						flex   : 0 0 18%;
 						padding: 0.5rem 0.25rem;
 					}
 
@@ -285,9 +286,11 @@
 				padding-right: 2rem;
 				position     : relative;
 
-				@include media-breakpoint-down(md) {
-					padding: 0;
-					flex   : 0;
+				@include media-breakpoint-down(sm) {
+					padding : 0 !important;
+					position: absolute;
+					right   : 0.375rem;
+					top     : 1rem;
 				}
 
 				i {
@@ -296,11 +299,8 @@
 					transition: $transition-base;
 					font-size : 1.5rem;
 
-					@include media-breakpoint-down(md) {
-						position : absolute;
-						right    : 0.5rem;
-						top      : 0;
-						transform: translateY(-50%);
+					@include media-breakpoint-down(sm) {
+						font-size: 0.875rem;
 					}
 				}
 			}
